--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.application.name=boutique-cinema-springboot
 spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
-spring.datasource.url=jdbc:oracle:thin:@localhost:1521:xe
+spring.datasource.url=jdbc:oracle:thin:@192.168.0.27:1521:xe
 spring.datasource.username=boutiquedbuser
 spring.datasource.password=1234
