setting : 어플리케이션 프로퍼티스에 설정 추가(#19)

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,15 @@ spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
 spring.datasource.url=jdbc:oracle:thin:@192.168.0.27:1521:xe
 spring.datasource.username=boutiquedbuser
 spring.datasource.password=1234
+
+#데이터베이스와의 연동 설정
+#spring Data JPA 는 자동으로 테이블의 생성, DB처리에 필요한 SQL의 생성도 자동으로 생성
+#자동으로 테이블이 생성되거나 변경될수 있는 옵션 추가
+#spring.jpa.hibernate.ddl-auto SQL의 DDL 기능을 의미
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.show-sql=true
+
+#파일 업로드에 필요한 기능은 스프링 web 관련 라이브러리에 존재하기떄문에 전송크기,파일크기만 설정해줌
+spring.servlet.multipart.max-request-size=30MB
+spring.servlet.multipart.max-file-size=10MB
