feat : 영화 등록기능 구현(#19)

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,4 +14,7 @@ spring.jpa.show-sql=true
 
 #파일 업로드에 필요한 기능은 스프링 web 관련 라이브러리에 존재하기떄문에 전송크기,파일크기만 설정해줌
 spring.servlet.multipart.max-request-size=30MB
-spring.servlet.multipart.max-file-size=10MB
+spring.servlet.multipart.max-file-size=50MB
+
+#C:\upload경로를 사용안한 이유 = 프로젝트파일 내부에 upload파일을 생성해서 그쪽으로 경로를 잡았기때문
+com.cinema.upload.path=upload
