--- a/build.gradle
+++ b/build.gradle
@@ -32,6 +32,8 @@ dependencies {
     annotationProcessor 'org.projectlombok:lombok'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
+    implementation 'org.modelmapper:modelmapper:3.1.0'
+    implementation 'net.coobird:thumbnailator:0.4.14'
 }
 
 tasks.named('test') {
