--- a/build.gradle
+++ b/build.gradle
@@ -34,6 +34,7 @@ dependencies {
     testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
     implementation 'org.modelmapper:modelmapper:3.1.0'
     implementation 'net.coobird:thumbnailator:0.4.14'
+    implementation 'org.hibernate.validator:hibernate-validator'
 }
 
 tasks.named('test') {
