add : 도메인 member, 의존성추가, 비밀번호 암호화 기능추가

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,3 +18,4 @@ spring.servlet.multipart.max-file-size=50MB
 
 #C:\upload경로를 사용안한 이유 = 프로젝트파일 내부에 upload파일을 생성해서 그쪽으로 경로를 잡았기때문
 com.cinema.upload.path=upload
+logging.level.org.springframework.security.web=trace
