--- a/build.gradle
+++ b/build.gradle
@@ -37,6 +37,7 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-security' // 스프링 시큐리티를 사용하기 위한 스타터 추가
     implementation 'org.thymeleaf.extras:thymeleaf-extras-springsecurity6' // 타임리프에ㅓ 스프링 시큐리티를 사용하기 위해 추가
     testImplementation 'org.springframework.security:spring-security-test' // 스프링 시큐리티를 테스트하기 위한 의존성 추가
+    implementation 'org.springframework.boot:spring-boot-starter-validation' // 유효성 검사 애노테이션 의존성 추가(ex:@Email, @Pattern)
 }
 
 tasks.named('test') {
